--- a/css/site-styles.css
+++ b/css/site-styles.css
@@ -137,7 +137,11 @@ iframe{
   transition:opacity .5s;
 }
 /* loading container & spinner */
+/* container of both the iframe and loading spinner */
 .loading-container{
+  position:relative;
+}
+.loading-overlay{
   background-color: #333333dd;
   backdrop-filter: blur(5px);
   position:absolute;
@@ -179,7 +183,7 @@ iframe[src]{
   opacity:1;
   transition-delay: 1s;
 }
-iframe[src] ~ .loading-container{
+iframe[src] ~ .loading-overlay{
   opacity:0;
   transition-delay: 1s;
   pointer-events: none;
